Added functionality to keep memory of dark/light mode between pages and added some inital component structure for components

--- a/portfolio_website_km/public/index.html
+++ b/portfolio_website_km/public/index.html
@@ -20,7 +20,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script>$(function() { alert('Hello World') });</script>
+    <!-- <script>$(function() { alert('Hello World') });</script> -->
     <!-- <script>$(document).ready(function(){
       $("#tooglenight").change(function() {
         console.log("CheckBox was clicked")
